@@ -68,6 +68,7 @@ setGeneric("nnzero", function(x, na.counted = NA) standardGeneric("nnzero"),
 
 setGeneric("updown", function(update, C, L) standardGeneric("updown"))
 
+if(as.numeric(R.version$`svn rev`) < 60620)
 setGeneric("toeplitz", function(x, ...) standardGeneric("toeplitz"),
            useAsDefault= function(x, ...) stats::toeplitz(x))
 
